--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -109,8 +109,12 @@
                                 <small id="usernamehelp" class="form-text text-muted">{{'alert.signInMsg' | translate}}</small>
                             </div>
                             <div class="form-group">
-                                <label for="fullname">{{'user.full-name' | translate}}</label>
-                                <input type="text" class="form-control" id="fullname" formControlName="fullname">
+                                <label for="first_name">{{'user.firstName' | translate}}</label>
+                                <input type="text" class="form-control" id="first_name" formControlName="first_name">
+                            </div>
+                            <div class="form-group">
+                                <label for="last_name">{{'user.lastName' | translate}}</label>
+                                <input type="text" class="form-control" id="last_name" formControlName="last_name">
                             </div>
                             <div class="form-group">
                                 <label for="fullname">{{'user.email' | translate}}</label>
@@ -133,9 +137,12 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="yearBirth">{{'user.year'|translate}}</label>
-                                <select class="form-control form-select select2" formControlName="yearBirth" appBirthYears>
-                                </select>
+                            <label for="birthday">{{'user.birthday' | translate}}</label>
+                            <input type="date" class="form-control" id="birthday" formControlName="birthday">
+                            </div>
+                            <div class="form-group">
+                                <label for="nationality">{{'user.nationality' | translate}}</label>
+                                <input type="text" class="form-control" id="nationality" formControlName="nationality">
                             </div>
                             <div class="form-group">
                                 <div>
