--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -18,9 +18,9 @@
                         </div>
                         <div class="card-body d-flex">
                             <div class="rank">2</div>
-                            <div class="text-end float-end  mt-auto ms-auto">
-                                <h3 class="mb-2">Display name here</h3>
-                                <span class="d-none d-sm-block">100 points</span>
+                            <div class="text-end float-end  mt-auto ms-auto" *ngIf="!loading && users.length > 1">
+                                <h3 class="mb-2">{{users[1].username}}</h3>
+                                <span class="d-none d-sm-block">{{users[1].score}} points</span>
                             </div>
                         </div>
                     </div>
@@ -30,9 +30,9 @@
                         </div>
                         <div class="card-body d-flex">
                             <div class="rank">1</div>
-                            <div class="text-end float-end mt-auto ms-auto">
-                                <h3 class="mb-2">Display name here</h3>
-                                <span class="d-none d-sm-block">180 points</span>
+                            <div class="text-end float-end mt-auto ms-auto" *ngIf="!loading && users.length > 0">
+                                <h3 class="mb-2">{{users[0].username}}</h3>
+                                <span class="d-none d-sm-block">{{users[0].score}} points</span>
                             </div>
                         </div>
                     </div>
@@ -42,16 +42,16 @@
                         </div>
                         <div class="card-body d-flex">
                             <div class="rank">3</div>
-                            <div class="text-end float-end mt-auto ms-auto">
-                                <h3 class="mb-2">Display name here </h3>
-                                <span class="d-none d-sm-block">105 points</span>
+                            <div class="text-end float-end  mt-auto ms-auto" *ngIf="!loading && users.length > 2">
+                                <h3 class="mb-2">{{users[2].username}}</h3>
+                                <span class="d-none d-sm-block">{{users[2].score}} points</span>
                             </div>
                         </div>
                     </div>
                 </div>
                 <ul class="list-group" *ngIf="!loading">
 
-                    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of users">
+                    <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of users.slice(3)">
                         <div class="item-content">
                             <img src="../../assets/image/avatar/avatar2.jpg" alt="">
                             <span class="ps-2">{{item.username}} ({{item.score}})</span>
