--- a/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
@@ -5,14 +5,14 @@
                 <button class="btn btn-primary ">Topics</button>
             </li>
             <li>
-                <form class="form-inline search mt-xs-4">
+                <form class="form-inline search mt-xs-2">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search for any topic" aria-label="Search">
                 </form>
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
             <div class="card-group" *ngIf="listtopics">
-                <div class="card" style="cursor: pointer;" *ngFor="let topic of listtopics;" (click)="gotolessons(topic)">
+                <div class="card" style="cursor: pointer; margin-right: 8px;" *ngFor="let topic of listtopics;" (click)="gotolessons(topic)">
 
                     <div class="card-body bg-yellow">
                         <div class="number">Abc</div>
