--- a/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/topics.component.html
@@ -2,11 +2,11 @@
     <section class="lessons">
         <ul class="nav nav-pills nav-left justify-content-between" id="pills-tab" role="tablist">
             <li class="nav-item " role="presentation">
-                <button class="btn btn-primary ">Topics</button>
+                <button class="btn btn-primary ">{{'topic.topics' | translate}}</button>
             </li>
             <li>
                 <form class="form-inline search mt-xs-2">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search for any topic" aria-label="Search">
+                    <input class="form-control mr-sm-2" type="search"  placeholder="{{'topic.searchTopic' | translate}}"aria-label="Search">
                 </form>
             </li>
         </ul>
