--- a/frontEndCaptini/src/app/Auth/forget-password/forget-password.component.html
+++ b/frontEndCaptini/src/app/Auth/forget-password/forget-password.component.html
@@ -3,20 +3,20 @@
         <img src="../../../assets/image/logo.svg" style="width: 250px;">
     </div>
     <div class="pb-3">
-        <label>Reset your password</label>
+        <label>{{ 'resetPassword.resetMsg' | translate }}</label>
     </div>
     <form [formGroup]="loginForgetForm" (ngSubmit)= "loginForget()">
         <div>
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email" formControlName="email">
+            <label for="exampleFormControlInput1" class="form-label">{{'user.email' | translate}}</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="{{'user.email' | translate}}" formControlName="email">
         </div>
 
         <div class="mb-3 text-center">
-            <span>Here mistakenly? <a routerLink="/login">Go back to the sign in page</a></span>
+            <span>{{ 'resetPassword.backToSignin' | translate }}<a routerLink="/login">{{ 'resetPassword.backToSigninMsg' | translate }}</a></span>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit" >Send reset link</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit" >{{ 'buttons.sendResetLink' | translate }}</button>
     </form>
-    <div class="text-center footer">
+    <div class="text-center">
         <div>
             <a [routerLink]="" (click)="switchLang( 'en')"><img src="../../../assets/image/flag/en.png" alt="England" class="pe-2"></a>
             <a [routerLink]="" (click)="switchLang( 'icl')"><img src="../../../assets/image/flag/icl.png" alt="Iceland"></a>
