--- a/frontEndCaptini/src/app/Auth/register/register.component.html
+++ b/frontEndCaptini/src/app/Auth/register/register.component.html
@@ -7,7 +7,7 @@
             <label>{{ 'register.get-board' | translate }}</label>
         </div>
         <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="showMsg">
-            {{msgContent}}
+            {{'alert.signUpMsg' | translate }}  <a routerLink="/login">{{'register.get-board'|translate}}</a>
             <button type="button" class=" btn close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -80,7 +80,7 @@
             <button class="w-100 btn btn-lg btn-primary mb-2" type="submit" [disabled]="registerForm.invalid && isChecked">{{'buttons.sign-up' | translate}}</button>
         </form>
         <span> {{'register.account'|translate}} <a routerLink="/login">{{'register.singIn'|translate}}</a></span>
-        <div class="text-center footer">
+        <div class="text-center">
             <div>
                 <a [routerLink]="" (click)="switchLang('en')"><img src="../../../assets/image/flag/en.png" alt="England" class="pe-2"></a>
                 <a [routerLink]="" (click)="switchLang('icl')"><img src="../../../assets/image/flag/icl.png" alt="Iceland"></a>
