--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -3,10 +3,10 @@
     <section class="leader-dash boxed">
         <ul class="nav nav-pills nav-justified" id="pills-tab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="pills-leaderBoard-tab" data-bs-toggle="pill" data-bs-target="#pills-leaderBoard" type="button" role="tab" aria-controls="pills-leaderBoard" aria-selected="true">leader Board</button>
+                <button class="nav-link active" id="pills-leaderBoard-tab" data-bs-toggle="pill" data-bs-target="#pills-leaderBoard" type="button" role="tab" aria-controls="pills-leaderBoard" aria-selected="true">{{'header.leaderBoard' | translate}}</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="pills-statics-tab" data-bs-toggle="pill" data-bs-target="#pills-statics" type="button" role="tab" aria-controls="pills-statics" aria-selected="false">statics</button>
+                <button class="nav-link" id="pills-statics-tab" data-bs-toggle="pill" data-bs-target="#pills-statics" type="button" role="tab" aria-controls="pills-statics" aria-selected="false">{{'header.statics' | translate}}</button>
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
