--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -25,7 +25,7 @@
                     <input type="text" class="form-control" formControlName="id" hidden>
                     <div>
                         <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="showMsg">
-                            {{msgContent}}
+                            {{'alert.updateProfileMsg' | translate}}
                             <button type="button" class="btn close" data-dismiss="alert" aria-label="Close">
                               <span aria-hidden="true">&times;</span>
                             </button>
