--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
@@ -16,7 +16,7 @@
                 fill="#32324D"
               />
             </svg>
-            Lessons
+            {{'topic.lessons' | translate}} 
           </button>
         </li>
         <li>
@@ -36,7 +36,7 @@
             <button class="btn btn-default" (click)="goPrev()" *ngIf="index_lesson > 0">
               <i class="ri-arrow-left-line"></i>
             </button>
-            <h2>Lesson {{ index_lesson + 1 }} of {{ listLessons?.length }}</h2>
+            <h2>{{'topic.lesson' | translate}}  {{ index_lesson + 1 }} {{'topic.of' | translate}} {{ listLessons?.length }}</h2>
 
             <button
               class="btn btn-default"
@@ -90,7 +90,7 @@
                         <button class="btn btn-default" >
                           <i class="ri-check-double-fill" (click)="getScore()"></i>
                         </button>
-                        <span>Score: {{score}}</span>
+                        <span>{{'topic.score' | translate}}: {{score}}</span>
                       </span>
                       <button class="btn btn-default" >
                         <i class="ri-share-fill" (click)="sendTask()"></i>
