--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson.component.html
@@ -6,16 +6,16 @@
                     <button class="btn btn-default btn-sm" type="button" routerLink="/topics">
                         <svg width="6" height="8" viewBox="0 0 6 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2.31629 3.99993L5.20379 6.88743L4.37896 7.71226L0.666626 3.99993L4.37896 0.287598L5.20379 1.11243L2.31629 3.99993Z" fill="#32324D"/>
-                            </svg> Topics 
+                            </svg> {{'topic.topics' | translate}} 
                      </button>
                 </li>
                 <li>
-                    <h3>Lessons</h3>
+                    <h3>{{'topic.lessons' | translate}}</h3>
                 </li>
             </div>
             <li>
                 <form class="form-inline search mt-xs-4">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search for any lesson" aria-label="Search">
+                    <input class="form-control mr-sm-2" type="search" placeholder="{{'topic.searchLesson' | translate}}" aria-label="Search">
                 </form>
             </li>
         </ul>
@@ -28,10 +28,10 @@
                         </div>
                         <div class="card-header d-flex justify-content-between"style=" height: 100px;">
                             <div class="">
-                                <h3>lesson {{i+1}}</h3>
+                                <h3>{{'topic.lesson' | translate}} {{i+1}}</h3>
                                 <p class="semi-bold">{{lesson.subject}}</p>
                             </div>
-                            <span class="success badge"> Finished</span>
+                            <span class="success badge"> {{'topic.finished' | translate}}</span>
                         </div>
                     </div>
                 </div>
