adjust icelandic translation in user profile

--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -123,7 +123,7 @@
                             <div class="form-group">
                                 <label for="nativeLang">{{'user.nativeLanguage'|translate}}</label>
                                 <select id="nativeLang" class="form-control form-select select2 " formControlName="nativeLang" appAllLanguages>
-                                    
+
                                 </select>
                             </div>
                             <div class="form-group">
@@ -238,7 +238,7 @@
                                 <hr>
                             </div>
                             <p>{{'title.LessonsData'|translate}}</p>
-                            <p>{{'user.Read'|translate}}<a href="#"> {{'copyrights.Terms'|translate}}</a> and <a href="#">{{'register.privacy'|translate}}</a> </p>
+                            <p>{{'user.Read'|translate}} <a href="#">{{'register.terms'|translate}}</a> {{'register.and'|translate}} <a href="#">{{'register.privacy'|translate}}</a> </p>
                             <a href="#">{{'user.help'|translate}}</a>
                         </div>
                         <div class="account" id="account">
