--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -123,7 +123,7 @@
                             <div class="form-group">
                                 <label for="nativeLang">{{'user.nativeLanguage'|translate}}</label>
                                 <select id="nativeLang" class="form-control form-select select2 " formControlName="nativeLang" appAllLanguages>
-                                    
+
                                 </select>
                             </div>
                             <div class="form-group">
@@ -199,17 +199,25 @@
                                     <label>{{'user.displayLang'|translate}}</label>
                                 </div>
                                 <div class="d-inline-flex">
-
-                                    <div class="form-check me-2">
-                                        <input mdbCheckbox class="form-check-input" type="radio" id="gridEnglish" formControlName="displangEn">
-                                        <label class="form-check-label" for="gridEnglish">{{'language.en'|translate}} <img src="../../assets/image/flag/en.png">
-                                        </label>
+                                    <div class="form-check form-switch d-flex justify-content-center ">
+                                      <div class>
+                                        <label class="form-check-label" for="gridEnglish">{{'language.en'|translate}} <img src="../../assets/image/flag/en.png"></label>
+                                      </div>
+                                      <div>
+                                        <input mdbCheckbox class="form-check-input" type="radio" id="gridIcl" formControlName="displangIcl" (click)="switchLang('icl')">
+                                      </div>
+                                      <div class="">
+                                        <label class="form-check-label" for="gridIcl">{{'language.icl'|translate}} <img
+                                          src="../../assets/image/flag/icl.png"></label>
+                                      </div>
                                     </div>
-                                    <div class="form-check me-2 ">
-                                        <input mdbCheckbox class="form-check-input" type="radio" id="gridIcl" formControlName="displangIcl">
+                                    <!--
+                                      <div class="form-check me-2 ">
+                                        <input mdbCheckbox class="form-check-input" type="radio" id="gridIcl" formControlName="displangIcl" (click)="switchLang('icl')">
                                         <label class="form-check-label" for="gridIcl">{{'language.icl'|translate}} <img
                                                 src="../../assets/image/flag/icl.png"></label>
-                                    </div> 
+                                    </div>
+                                    -->
                                 </div>
                                 <div>
                                     <label>{{'user.notif'|translate}}</label>
