fix css for toggle button

--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -198,27 +198,25 @@
                                 <div>
                                     <label>{{'user.displayLang'|translate}}</label>
                                 </div>
-                                <div class="d-inline-flex">
-                                    <div class="form-check form-switch d-flex justify-content-center ">
-                                      <div class>
-                                        <label class="form-check-label" for="gridEnglish">{{'language.en'|translate}} <img src="../../assets/image/flag/en.png"></label>
-                                      </div>
-                                      <div>
-                                        <input mdbCheckbox class="form-check-input" type="radio" id="gridIcl" formControlName="displangIcl" (click)="switchLang('icl')">
-                                      </div>
-                                      <div class="">
-                                        <label class="form-check-label" for="gridIcl">{{'language.icl'|translate}} <img
-                                          src="../../assets/image/flag/icl.png"></label>
-                                      </div>
+                                  <div class="d-inline-flex ">
+                                    <div class="form-check ps-0">
+                                      <label class="form-check-label" for="gridEnglish">{{'language.en'|translate}} <img src="../../assets/image/flag/en.png"></label>
                                     </div>
-                                    <!--
-                                      <div class="form-check me-2 ">
-                                        <input mdbCheckbox class="form-check-input" type="radio" id="gridIcl" formControlName="displangIcl" (click)="switchLang('icl')">
-                                        <label class="form-check-label" for="gridIcl">{{'language.icl'|translate}} <img
-                                                src="../../assets/image/flag/icl.png"></label>
+                                    <div class="form-switch ps-5">
+                                      <input mdbCheckbox class="form-check-input" type="radio" id="gridIcl" formControlName="displangIcl" (click)="switchLang()">
                                     </div>
-                                    -->
-                                </div>
+                                    <div class="form-check ps-0">
+                                      <label class="form-check-label" for="gridIcl">{{'language.icl'|translate}} <img
+                                        src="../../assets/image/flag/icl.png"></label>
+                                    </div>
+                                  </div>
+                                  <!--
+                                    <div class="form-check me-2 ">
+                                      <input mdbCheckbox class="form-check-input" type="radio" id="gridIcl" formControlName="displangIcl" (click)="switchLang('icl')">
+                                      <label class="form-check-label" for="gridIcl">{{'language.icl'|translate}} <img
+                                              src="../../assets/image/flag/icl.png"></label>
+                                  </div>
+                                  -->
                                 <div>
                                     <label>{{'user.notif'|translate}}</label>
                                 </div>
