--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -14,7 +14,7 @@
                 <div class="honorary-podium d-flex justify-content-center">
                     <div class="card silver mt-auto me-3">
                         <div class="crown-silver">
-                            <img src="../../assets/image/avatar/4.jpg" class="card-img-top silver-border" alt="...">
+                            <img src="{{users[1].profile_photo}}" class="card-img-top silver-border" alt="...">
                         </div>
                         <div class="card-body d-flex">
                             <div class="rank">2</div>
@@ -26,7 +26,7 @@
                     </div>
                     <div class="card gold mt-auto me-3">
                         <div class="crown-gold">
-                            <img src="../../assets/image/avatar/5.jpg" class="card-img-top gold-border" alt="...">
+                            <img src="{{users[0].profile_photo}}" class="card-img-top gold-border" alt="...">
                         </div>
                         <div class="card-body d-flex">
                             <div class="rank">1</div>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="card bronze mt-auto">
                         <div class="crown-bronze">
-                            <img src="../../assets/image/avatar/6.jpg" class="card-img-top bronze-border" alt="...">
+                            <img src="{{users[2].profile_photo}}" class="card-img-top bronze-border" alt="...">
                         </div>
                         <div class="card-body d-flex">
                             <div class="rank">3</div>
@@ -53,7 +53,7 @@
 
                     <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let item of users.slice(3)">
                         <div class="item-content">
-                            <img src="../../assets/image/avatar/avatar2.jpg" alt="">
+                            <img src="{{item.profile_photo}}" alt="">
                             <span class="ps-2">{{item.username}} ({{item.score}})</span>
                         </div>
                         <span>{{item.global_rank}}</span>
