--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -121,7 +121,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="birthday">{{'user.birthday' | translate}}</label>
+                                <label for="birthday">{{'user.year' | translate}}</label>
                                 <input type="date" class="form-control" id="birthday" formControlName="birthday">
                             </div>
                             <div class="form-group">
