--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -126,7 +126,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="nationality">{{'user.nationality' | translate}}</label>
+                                <select id="nationality" class="form-control form-select select2 "
+                                    formControlName="nationality" appAllNationalities>
+
+                                </select>
+                                <!--
                                 <input type="text" class="form-control" id="nationality" formControlName="nationality">
+                                -->
+
                             </div>
                             <div class="form-group">
                                 <div>
