--- a/frontEndCaptini/src/app/modules/general/components/home/home.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/home/home.component.html
@@ -78,6 +78,12 @@
                                 <img src="../../assets/image/bkg/pie.png" style="width: 250px; margin-top: 20²px;">
                             </div>
                         </div>
+                        <div class="card h96 active" *ngIf="!loading && user">
+                            <div class="card-body">
+                                <h5 class="card-title">Total score</h5>
+                                <p class="card-text text-end text-lg">{{user?.score}}</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card h96">
