--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -176,13 +176,13 @@
                                 </div>
                                 <div class="d-inline-flex">
                                   <div class="form-check ps-0">
-                                    <label class="form-check-label" for="gridEnglish">{{'language.en'|translate}} <img src="../../assets/image/flag/en.png"></label>
+                                    <label class="form-check-label">{{'language.en'|translate}} <img src="../../assets/image/flag/en.png"></label>
                                   </div>
                                   <div class="form-switch ps-5">
-                                    <input mdbCheckbox class="form-check-input" type="radio" role="switch" id="gridIcl" formControlName="displangIcl" [checked]="is_icelandic" (click)="switchLang()">
+                                    <input mdbCheckbox class="form-check-input" type="radio" role="switch" formControlName="display_language" [checked]="is_icelandic" (click)="switchLang()">
                                   </div>
                                   <div class="form-check ps-0">
-                                    <label class="form-check-label" for="gridIcl">{{'language.icl'|translate}} <img
+                                    <label class="form-check-label">{{'language.icl'|translate}} <img
                                       src="../../assets/image/flag/icl.png"></label>
                                   </div>
                                 </div>
