--- a/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/profile/profile.component.html
@@ -121,9 +121,11 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="birthday">{{'user.year' | translate}}</label>
-                                <input type="date" class="form-control" id="birthday" formControlName="birthday">
-                            </div>
+                                <label for="birthday">{{ 'user.year' | translate }}</label>
+                                <select class="form-control" id="birthday" formControlName="birthday">
+                                    <option *ngFor="let year of getYearOptions()" [value]="year">{{year}}</option>
+                                </select>
+                              </div>
                             <div class="form-group">
                                 <label for="nationality">{{'user.nationality' | translate}}</label>
                                 <select id="nationality" class="form-control form-select select2 "
