fix formatting for dropdown lists on registration page. Need to fix UpdateProfile dropdown list directives

--- a/frontEndCaptini/src/app/Auth/register/register.component.html
+++ b/frontEndCaptini/src/app/Auth/register/register.component.html
@@ -50,12 +50,16 @@
               <label class="form-label">{{'user.nationality' | translate}}</label>
               <select class="form-control form-select select2" id="nationality"
               formControlName="nationality" appAllNationalities>
+                <option value="" disabled selected hidden>{{ 'user.choose-nationality'| translate }}</option>
               </select>
+              <span *ngIf="Rf['nationality'] && Rf['nationality'].invalid && Rf['nationality'].touched " class="text-danger ">{{'validation.required'|translate}}</span>
           </div>
           <div class="mb-2">
             <label class="form-label" for="birthday">{{ 'user.year' | translate }}</label>
-            <select class="form-control" id="birthday" formControlName="birthday" appBirthYears>
+            <select class="form-control  form-select select2" id="birthday" formControlName="birthday" appBirthYears>
+              <option value="" disabled selected hidden>{{ 'user.choose-year'| translate }}</option>
             </select>
+            <span *ngIf="Rf['birthyear'] && Rf['birthyear'].invalid && Rf['birthyear'].touched " class="text-danger ">{{'validation.required'|translate}}</span>
           </div>
             <div class="form-group mb-2">
                 <label class="form-label">{{'user.password' | translate}}</label>
