align changes of user birthday to birthyear with backend

--- a/frontEndCaptini/src/app/Auth/register/register.component.html
+++ b/frontEndCaptini/src/app/Auth/register/register.component.html
@@ -55,8 +55,8 @@
               <span *ngIf="Rf['nationality'] && Rf['nationality'].invalid && Rf['nationality'].touched " class="text-danger ">{{'validation.required'|translate}}</span>
           </div>
           <div class="mb-2">
-            <label class="form-label" for="birthday">{{ 'user.year' | translate }}</label>
-            <select class="form-control  form-select select2" id="birthday" formControlName="birthday" appBirthYears>
+            <label class="form-label" for="birthyear">{{ 'user.year' | translate }}</label>
+            <select class="form-control  form-select select2" id="birthyear" formControlName="birthyear" appBirthYears>
               <option value="" disabled selected hidden>{{ 'user.choose-year'| translate }}</option>
             </select>
             <span *ngIf="Rf['birthyear'] && Rf['birthyear'].invalid && Rf['birthyear'].touched " class="text-danger ">{{'validation.required'|translate}}</span>
