--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
@@ -16,7 +16,7 @@
                 fill="#32324D"
               />
             </svg>
-            {{'topic.lessons' | translate}} 
+            {{'topic.lessons' | translate}}
           </button>
         </li>
         <li>
@@ -59,7 +59,52 @@
                   style="align-items: baseline"
                   *ngFor="let prompt of prompts"
                 >
-                <table>
+                <div class="card text-center">
+                  <div class="card-header">{{ prompt.flashcard_text }}</div>
+
+                    <div class="card-title" *ngFor="let task of prompt.tasks">
+                    <div class="card-body">
+                    <button class="btn btn-default" (click)="play_audio(task.audio_url)">
+                      <i class="ri-volume-up-line"></i>
+                    </button>
+                    <span class="letter">{{ task.task_text }}</span>
+                    <div>
+                      <button class="btn btn-default" (click)="initiateRecording(task.id)">
+                        <i class="ri-mic-line"></i>
+                      </button>
+                      <button class="btn btn-default" (click)="stopRecording()">
+                        <i class="ri-play-fill"></i>
+                      </button>
+                      <audio
+                        class="btn btn-default"
+                        controls
+
+                        *ngIf="url && task.id == id_current_task"
+                      >
+                        <source [src]="sanitize()" />
+                        {{ task.id }}
+                        <i class="ri-play-fill"></i>
+                      </audio>
+                      <span>
+                        <button class="btn btn-default" >
+                          <i class="ri-check-double-fill" (click)="getScore()"></i>
+                        </button>
+                        <span>{{'topic.score' | translate}}: {{score}}</span>
+                      </span>
+                      <button class="btn btn-default" >
+                        <i class="ri-share-fill" (click)="sendTask()"></i>
+                      </button>
+                    </div>
+                  </div>
+
+                </div>
+                <hr class="card-separator" />
+                <hr class="card-separator" />
+                <hr class="card-separator" />
+
+                </div>
+
+                <!-- <table>
                   <th>
                   <b> {{ prompt.flashcard_text }}</b>
                 </th>
@@ -100,7 +145,7 @@
                   <hr />
                   <hr />
                 </tr>
-                </table>
+                </table> -->
                 </div>
               </div>
             </div>
