--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.html
@@ -64,7 +64,7 @@
 
                     <div class="card-title" *ngFor="let task of prompt.tasks">
                     <div class="card-body">
-                    <button class="btn btn-default" (click)="play_audio(task.audio_url)">
+                    <button class="btn btn-info btn-circle" (click)="play_audio(task.audio_url)">
                       <i class="ri-volume-up-line"></i>
                     </button>
                     <span class="letter">{{ task.task_text }}</span>
